--- a/Config Downloader/MainWindow.xaml
+++ b/Config Downloader/MainWindow.xaml
@@ -1,7 +1,14 @@
 ﻿<Window x:Name="mainWindow" x:Class="Config_Downloader.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Config Downloader" Height="534" Width="942" Closing="Window_Closing_1" Icon="Source/Icon/ECTunes Logo.ico" ResizeMode="CanMinimize">
+        Title="Config Downloader" 
+        Height="534" 
+        Width="942" 
+        Closing="Window_Closing_1" 
+        Icon="Source/Icon/ECTunes Logo.ico" 
+        ResizeMode="CanMinimize"
+        WindowStartupLocation="CenterScreen"
+        >
     <Grid x:Name="gridBackground" Height="505" VerticalAlignment="Top" Margin="0,0,2,-1">
         <Grid.Background>
             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
