--- a/Config Downloader/View/LoginScreen.xaml
+++ b/Config Downloader/View/LoginScreen.xaml
@@ -9,12 +9,11 @@
     WindowStyle="None"
     SizeToContent="WidthAndHeight"
     FocusManager.FocusedElement= "{Binding ElementName=txbPassword}">
-    <Border CornerRadius="10"
-        BorderBrush="Gray"
-        BorderThickness="3"
-        Background="Beige"
+    <Border CornerRadius="0"
+        BorderBrush="#FFB9B9B9"
+        BorderThickness="1"
         Margin="24"
-        Padding="4">
+        Padding="4" Background="White">
         <Border.Effect>
             <DropShadowEffect Color="Gray"
                 Opacity=".50"
@@ -36,11 +35,6 @@
                 <Image Name="imgKey"
                     Margin="0,0,10,8"
                     Source="/Config Downloader;component/Source/Icon/ECTunes Logo.ico" Height="36">
-                    <Image.Effect>
-                        <DropShadowEffect Color="Gray"
-                            Opacity=".50"
-                            ShadowDepth="8" />
-                    </Image.Effect>
                 </Image>
             </StackPanel>
             <Label Grid.Column="1"
@@ -58,30 +52,113 @@
 
             <StackPanel Grid.Column="2"
                 Grid.Row="2"
-                Margin="41,6,44,10"
+                Margin="41,10,44,10"
                 HorizontalAlignment="Center"
                 Orientation="Horizontal" Width="155">
                 <Button x:Name="btnLogin"
             		IsDefault="True"
             		Content="Login"
-            		Click="btnLogin_Click" Margin="0,0,5,0" Width="65">
-                    <Button.Effect>
-                        <DropShadowEffect Color="Gray"
-            				Opacity=".50"
-            				ShadowDepth="5" />
-                    </Button.Effect>
-                </Button>
+            		Click="btnLogin_Click" Margin="0,0,5,0" Width="65" Background="{x:Null}" />
                 <Button x:Name="btnCancel"
                 	IsCancel="True"
                 	Content="Cancel"
-                	Click="btnCancel_Click" Width="65">
-                    <Button.Effect>
-                        <DropShadowEffect Color="Gray"
-                			Opacity=".50"
-                			ShadowDepth="5" />
-                    </Button.Effect>
-                </Button>
+                	Click="btnCancel_Click" Width="65" Background="{x:Null}"/>
             </StackPanel>
         </Grid>
     </Border>
+    <!--
+    <Window x:Class="Config_Downloader.View.LoginScreen"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    Title="LoginScreen" Height="179" Width="462"
+    WindowStartupLocation="CenterScreen"
+    AllowsTransparency="True"
+    ShowInTaskbar="False"
+    Background="Transparent"
+    WindowStyle="None"
+    SizeToContent="WidthAndHeight"
+    FocusManager.FocusedElement= "{Binding ElementName=txbPassword}">
+        <Border CornerRadius="0"
+        BorderBrush="Gray"
+        BorderThickness="0"
+        Margin="24"
+        Padding="4">
+            <Border.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="#FFA4E6FF"/>
+                    <GradientStop Color="White" Offset="1"/>
+                </LinearGradientBrush>
+            </Border.Background>
+            <Border.Effect>
+                <DropShadowEffect Color="Gray"
+                Opacity=".50"
+                ShadowDepth="16" />
+            </Border.Effect>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="60" />
+                    <ColumnDefinition Width="100" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="45*" />
+                    <RowDefinition Height="35*" />
+                    <RowDefinition Height="41*" />
+                </Grid.RowDefinitions>
+                <StackPanel Grid.Column="0"
+                Grid.Row="0">
+                    <Image Name="imgKey"
+                    Margin="0,0,10,8"
+                    Source="/Config Downloader;component/Source/Icon/ECTunes Logo.ico" Height="36">
+                        <Image.Effect>
+                            <DropShadowEffect Color="Gray"
+                            Opacity=".50"
+                            ShadowDepth="8" />
+                        </Image.Effect>
+                    </Image>
+                </StackPanel>
+                <Label Grid.Column="1"
+                Grid.Row="0"
+                Grid.ColumnSpan="2"
+                FontSize="16"
+                Margin="10,10,10,0">Please Login To Access This Application
+                </Label>
+                <Label Grid.Column="1"
+                Grid.Row="1">Password</Label>
+                <PasswordBox Grid.Column="2"
+                Grid.Row="1"
+                ToolTip="Enter Your Password"
+                x:Name="tbxPassword" Margin="0,2,23,6" />
+
+                <StackPanel Grid.Column="2"
+                Grid.Row="2"
+                Margin="41,6,44,10"
+                HorizontalAlignment="Center"
+                Orientation="Horizontal" Width="155">
+                    <Button x:Name="btnLogin"
+            		IsDefault="True"
+            		Content="Login"
+            		Click="btnLogin_Click" Margin="0,0,5,0" Width="65">
+                        <Button.Effect>
+                            <DropShadowEffect Color="Gray"
+            				Opacity=".50"
+            				ShadowDepth="5" />
+                        </Button.Effect>
+                    </Button>
+                    <Button x:Name="btnCancel"
+                	IsCancel="True"
+                	Content="Cancel"
+                	Click="btnCancel_Click" Width="65">
+                        <Button.Effect>
+                            <DropShadowEffect Color="Gray"
+                			Opacity=".50"
+                			ShadowDepth="5" />
+                        </Button.Effect>
+                    </Button>
+                </StackPanel>
+            </Grid>
+        </Border>
+    </Window>
+    -->
+
 </Window>
