--- a/Config Downloader/View/LoginScreen.xaml
+++ b/Config Downloader/View/LoginScreen.xaml
@@ -3,8 +3,9 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     Title="LoginScreen" Height="179" Width="462"
     WindowStartupLocation="CenterScreen"
+    Icon="../Source/Icon/ECTunes Logo.ico" 
     AllowsTransparency="True"
-    ShowInTaskbar="False"
+    ShowInTaskbar="True"
     Background="Transparent"
     WindowStyle="None"
     SizeToContent="WidthAndHeight"
